"New idea" page completed, content fixed, scss refactored

--- a/assets/idea.html
+++ b/assets/idea.html
@@ -23,7 +23,7 @@
         <div id="profile-bar" class="nav__right-side">
             <a class="nav__img-wrapper">
                 <img src="../img/profile.jpg">
-                <span class="nav__profile-name">Ilya</span>
+                <span class="nav__profile-name">Username</span>
                 <span class="caret"></span>
             </a>
             <ul class="dropdown-menu invisible-element">
@@ -106,40 +106,40 @@
                         <div class="row comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
-                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                                <div class="avatar__username"><a href="profile.html">Username</a></div>
                             </div>
                             <div class="flex-item comment">
-                                <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11</div>
+                                <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar massa in fermentum sagittis. Aliquam congue commodo ligula, quis pretium dui pellentesque a. Donec eget porta nibh, sed ullamcorper odio. Vivamus euismod leo ante, nec vestibulum sapien blandit sed. Mauris vel hendrerit mauris. Vestibulum vulputate metus sit amet urna facilisis euismod. Maecenas eget sapien ut arcu cursus lobortis. Curabitur vel quam porttitor, convallis odio interdum, iaculis tellus. Pellentesque pretium risus id volutpat maximus. Duis blandit tempus rutrum. Proin bibendum nibh quam, ac mattis massa bibendum congue.</div>
                                 <div class="comment__date">31 Aug 2018, 18:02</div>
                             </div>
                         </div>
                         <div class="row comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
-                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                                <div class="avatar__username"><a href="profile.html">Username</a></div>
                             </div>
                             <div class="flex-item comment">
-                                <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea tx i wanna do it!11</div>
+                                <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar massa in fermentum sagittis. Aliquam congue commodo ligula, quis pretium dui pellentesque a. Donec eget porta nibh, sed ullamcorper odio. Vivamus euismod leo ante, nec vestibulum sapien blandit sed. Mauris vel hendrerit mauris. Vestibulum vulputate metus sit amet urna facilisis euismod. Maecenas eget sapien ut arcu cursus lobortis.</div>
                                 <div class="comment__date">31 Aug 2018, 18:02</div>
                             </div>
                         </div>
                         <div class="row comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
-                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                                <div class="avatar__username"><a href="profile.html">Username</a></div>
                             </div>
                             <div class="flex-item comment">
-                                <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
+                                <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar massa in fermentum sagittis. Aliquam congue commodo ligula, quis pretium dui pellentesque a.</div>
                                 <div class="comment__date">31 Aug 2018, 18:02</div>
                             </div>
                         </div>
                         <div class="row comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
-                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                                <div class="avatar__username"><a href="profile.html">Username</a></div>
                             </div>
                             <div class="flex-item comment">
-                                <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
+                                <div class="comment__text">Lorem ipsum dolor sit amet.</div>
                                 <div class="comment__date">31 Aug 2018, 18:02</div>
                             </div>
                         </div>
