--- a/assets/settings.html
+++ b/assets/settings.html
@@ -23,7 +23,7 @@
         <div id="profile-bar" class="nav__right-side">
             <a class="nav__img-wrapper">
                 <img src="../img/profile.jpg">
-                <span class="nav__profile-name">Ilya</span>
+                <span class="nav__profile-name">Username</span>
                 <span class="caret"></span>
             </a>
             <ul class="dropdown-menu invisible-element">
