--- a/assets/profile.html
+++ b/assets/profile.html
@@ -23,7 +23,7 @@
         <div id="profile-bar" class="nav__right-side">
             <a class="nav__img-wrapper">
                 <img src="../img/profile.jpg">
-                <span class="nav__profile-name">Ilya</span>
+                <span class="nav__profile-name">Username</span>
                 <span class="caret"></span>
             </a>
             <ul class="dropdown-menu invisible-element">
@@ -43,7 +43,7 @@
                 <div class="user-bio__main__avatar">
                 </div>
                 <div class="user-bio__main__username">
-                    Username username
+                    Username Username
                 </div>
             </div>
             <div class="user-bio__info">
@@ -70,11 +70,11 @@
     <section class="ideas-user-section">
         <div class="idea">
             <div class="idea__header">
-                <div class="idea__header__name">Ideaasasfa asdsdad asadsa asd asas dasd asdadas  asda sd name</div>
+                <div class="idea__header__name">Idea name</div>
                 <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
                         class="rating rating__plus"> + </span></div>
             </div>
-            <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
+            <div class="idea__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar massa in fermentum sagittis. Aliquam congue commodo ligula, quis pretium dui pellentesque a. Donec eget porta nibh, sed ullamcorper odio. Vivamus euismod leo ante, nec vestibulum sapien blandit sed. Mauris vel hendrerit mauris. Vestibulum vulputate metus sit amet urna facilisis euismod. Maecenas eget sapien ut arcu cursus lobortis. Curabitur vel quam porttitor, convallis odio interdum, iaculis tellus. Pellentesque pretium risus id volutpat maximus. Duis blandit tempus rutrum. Proin bibendum nibh quam, ac mattis massa bibendum congue.</div>
             <div class="idea__footer">
                 <a href="idea.html" class="idea__footer__full">Read more..</a>
                 <a href="idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
