SCSS code refactored

--- a/assets/idea.html
+++ b/assets/idea.html
@@ -41,8 +41,11 @@
         <div class="idea">
             <div class="idea__header">
                 <div class="idea__header__name">Human Resource Management System</div>
-                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
-                        class="rating rating__plus"> + </span></div>
+                <div class="idea__header__rating">
+                    <span class="rating rating__minus">-</span>
+                    <span>0</span>
+                    <span class="rating rating__plus">+</span>
+                </div>
             </div>
             <div class="idea__text">
                 <section class="idea__text__main">
@@ -97,13 +100,13 @@
                 <div id="comments" class="idea__footer">
                     <hr>
                     <div class="comments">
-                        <div class="row answer-block">
+                        <div class="answer-block">
                             <div class="flex-item input-place">
                                 <textarea id="new-comment" placeholder="Write your comment here.."></textarea>
-                                <div class="input-place__button">Send</div>
+                                <button class="input-place__button">Send</button>
                             </div>
                         </div>
-                        <div class="row comments-block">
+                        <div class="comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
                                 <div class="avatar__username"><a href="profile.html">Username</a></div>
@@ -113,7 +116,7 @@
                                 <div class="comment__date">31 Aug 2018, 18:02</div>
                             </div>
                         </div>
-                        <div class="row comments-block">
+                        <div class="comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
                                 <div class="avatar__username"><a href="profile.html">Username</a></div>
@@ -123,7 +126,7 @@
                                 <div class="comment__date">31 Aug 2018, 18:02</div>
                             </div>
                         </div>
-                        <div class="row comments-block">
+                        <div class="comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
                                 <div class="avatar__username"><a href="profile.html">Username</a></div>
@@ -133,7 +136,7 @@
                                 <div class="comment__date">31 Aug 2018, 18:02</div>
                             </div>
                         </div>
-                        <div class="row comments-block">
+                        <div class="comments-block">
                             <div class="flex-item avatar">
                                 <div class="avatar__wrapper"></div>
                                 <div class="avatar__username"><a href="profile.html">Username</a></div>
