--- a/assets/new_idea.html
+++ b/assets/new_idea.html
@@ -60,7 +60,7 @@
             <div class="form-input new-idea__mockup">
                 <label for="ideaFuncInput">Mockups</label>
                 <div class="new-idea__mockup__add">
-                    <button>Upload</button>
+                    <button class="btn btn-update">Upload</button>
                 </div>
             </div>
             <div class="form-input new-idea__other">
