--- a/index.html
+++ b/index.html
@@ -45,37 +45,49 @@
         <div class="idea">
             <div class="idea__header">
                 <div class="idea__header__name">Idea name</div>
-                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
-                        class="rating rating__plus"> + </span></div>
+                <div class="idea__header__rating">
+                    <span class="rating rating__minus">-</span>
+                    <span>0</span>
+                    <span class="rating rating__plus">+</span>
+                </div>
             </div>
             <div class="idea__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar massa in fermentum sagittis. Aliquam congue commodo ligula, quis pretium dui pellentesque a. Donec eget porta nibh, sed ullamcorper odio. Vivamus euismod leo ante, nec vestibulum sapien blandit sed. Mauris vel hendrerit mauris. Vestibulum vulputate metus sit amet urna facilisis euismod. Maecenas eget sapien ut arcu cursus lobortis. Curabitur vel quam porttitor, convallis odio interdum, iaculis tellus. Pellentesque pretium risus id volutpat maximus. Duis blandit tempus rutrum. Proin bibendum nibh quam, ac mattis massa bibendum congue.</div>
             <div class="idea__footer">
                 <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
-                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span>
+                    0</a>
             </div>
         </div>
         <div class="idea">
             <div class="idea__header">
                 <div class="idea__header__name">Idea name</div>
-                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
-                        class="rating rating__plus"> + </span></div>
+                <div class="idea__header__rating">
+                    <span class="rating rating__minus">-</span>
+                    <span>0</span>
+                    <span class="rating rating__plus">+</span>
+                </div>
             </div>
             <div class="idea__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar massa in fermentum sagittis. Aliquam congue commodo ligula, quis pretium dui pellentesque a. Donec eget porta nibh, sed ullamcorper odio. Vivamus euismod leo ante, nec vestibulum sapien blandit sed. Mauris vel hendrerit mauris. Vestibulum vulputate metus sit amet urna facilisis euismod. Maecenas eget sapien ut arcu cursus lobortis. Curabitur vel quam porttitor, convallis odio interdum, iaculis tellus. Pellentesque pretium risus id volutpat maximus. Duis blandit tempus rutrum. Proin bibendum nibh quam, ac mattis massa bibendum congue.</div>
             <div class="idea__footer">
                 <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
-                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span>
+                    0</a>
             </div>
         </div>
         <div class="idea">
             <div class="idea__header">
                 <div class="idea__header__name">Idea name</div>
-                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
-                        class="rating rating__plus"> + </span></div>
+                <div class="idea__header__rating">
+                    <span class="rating rating__minus">-</span>
+                    <span>0</span>
+                    <span class="rating rating__plus">+</span>
+                </div>
             </div>
             <div class="idea__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar massa in fermentum sagittis. Aliquam congue commodo ligula, quis pretium dui pellentesque a. Donec eget porta nibh, sed ullamcorper odio. Vivamus euismod leo ante, nec vestibulum sapien blandit sed. Mauris vel hendrerit mauris. Vestibulum vulputate metus sit amet urna facilisis euismod. Maecenas eget sapien ut arcu cursus lobortis. Curabitur vel quam porttitor, convallis odio interdum, iaculis tellus. Pellentesque pretium risus id volutpat maximus. Duis blandit tempus rutrum. Proin bibendum nibh quam, ac mattis massa bibendum congue.</div>
             <div class="idea__footer">
                 <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
-                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span>
+                    0</a>
             </div>
         </div>
     </section>
