Post methods added
Ideas & comments now can be posted

--- a/public/assets/new_idea.html
+++ b/public/assets/new_idea.html
@@ -27,7 +27,7 @@
             <div class="form-input new-idea__func">
                 <label for="ideaFuncInput">Functionality</label>
                 <div id="functionWrapper" class="new-idea__func__wrapper">
-                    <input id="ideaFuncInput">
+                    <input id="ideaFuncInput" class="func-input">
                 </div>
                 <div class="new-idea__func__add">
                     <button id="addFunction">+</button>
@@ -43,8 +43,8 @@
                 <label for="ideaOtherInput">Other wishes</label>
                 <div id="wishWrapper" class="new-idea__other__wish-wrapper">
                     <div class="wish">
-                        <input id="ideaOtherInput" placeholder="Wish">
-                        <textarea placeholder="Description"></textarea>
+                        <input class="wish__name" id="ideaOtherInput" placeholder="Wish">
+                        <textarea class="wish__desc" placeholder="Description"></textarea>
                     </div>
                 </div>
                 <div class="new-idea__other__add">
