Filters on main page working properly now, correct comments displaying added
Best/new filters added, comments counter on main page is now changing
after adding a comment

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 <div id="pageContent" class="page-wrapper">
     <section class="ideas-section">
         <ul class="ideas-filter">
-            <li class="ideas-filter__current">New</li>
-            <li>Best</li>
+            <li id="newFilter" class="ideas-filter__current">Best</li>
+            <li id="bestFilter">New</li>
         </ul>
         <div id="ideasPlace">
 
