Information about users in settings added, minor fixes
Now information about user displays in settings, but can't be changed

--- a/public/assets/settings.html
+++ b/public/assets/settings.html
@@ -51,6 +51,7 @@
                     <label for="confirmPassInput">Confirm password</label>
                     <input id="confirmPassInput" type="password" placeholder="Password">
                 </div>
+                <div class="change-button">Change</div>
             </div>
         </div>
     </section>
